# ai-ops

./: .gitignore  AGENT.md  ARCHITECTURE.md  Makefile  README.md  TASKS.md  TODO.md  code-review-report.md  demo-page.html  dump.rdb  prototype.html  sre-platform-review-report-2025.md
config/: CONFIG_STRUCTURE.md  DOCKER_README.md  README.md  env-example.txt
config/docker/: docker-compose.yml
config/monitoring/: prometheus.yml
config/scripts/: docker-start.sh
docs/: API_DOCS.md  API_REFERENCE.md  API_REFERENCE_CONTROL_PLANE.md  API_REFERENCE_SRE_ASSISTANT.md  ARCHITECTURE.md  AUDIT_FIXES.md  CODEBASE_OVERVIEW.md  DEV_GUIDE.md  ROADMAP.md  SRE_ASSISTANT.md  USER_GUIDE.md  demo-page-code-review.md  dev-guide.md
docs/jules-scratch/: verify_dev_login.py
docs/references/: README.md  reference-adk-agent-samples.md  reference-adk-docs.md  reference-adk-examples.md  reference-google-sre-book.md  reference-salvaged_code.md  reference-snippets.md
generated-go-server-server/: main.go
generated-go-server-server/api/: swagger.yaml
generated-go-server-server/go/: README.md  api_alert_rules.go  api_audit.go  api_automation.go  api_callbacks.go  api_core.go  api_dashboard.go  api_incidents.go  api_notifications.go  api_resource_groups.go  api_resources.go  api_settings.go  api_teams.go  api_users.go  logger.go  model_ai_generated_report.go  model_alert_analysis_request.go  model_alert_rule.go  model_alert_rule_condition.go  model_alert_rule_create_request.go  model_alert_rule_create_request_condition.go  model_alert_rule_list.go  model_alert_rule_resource_filter.go  model_alert_rule_update_request.go  model_audit_log.go  model_audit_log_changes.go  model_audit_log_list.go  model_batch_operation_result.go  model_batch_operation_result_failures.go  model_batch_resource_operation.go  model_batch_resource_operation_parameters.go  model_callbacks_diagnosiscomplete_body.go  model_capacity_analysis_request.go  model_capacity_analysis_response.go  model_capacity_analysis_response_chart_data.go  model_capacity_analysis_response_cost_impact.go  model_capacity_analysis_response_current_usage.go  model_capacity_analysis_response_forecast.go  model_capacity_analysis_response_forecast_capacity_alerts.go  model_capacity_analysis_response_recommendations.go  (+98 more)
generated-python-flask-server/: setup.py
generated-python-flask-server/swagger_server/: __main__.py
install/: setup_local_environment.sh
jules-scratch/: README.md
jules-scratch/verification/: verify_alerts_page.py  verify_login.py
local/: install.md  setup_local_environment.sh  verify_environment.sh
pkg/api/: openapi.yaml  (+2 more)
services/sre-assistant/: .env.example  README.md  prometheus.yml  pyproject.toml  pytest.ini
services/sre-assistant/config/environments/: development.yaml  production.yaml  test.yaml
services/sre-assistant/scripts/: setup.sh
services/sre-assistant/src/: __init__.py
services/sre-assistant/src/sre_assistant/: auth.py  contracts.py  dependencies.py  main.py  workflow.py
services/sre-assistant/src/sre_assistant/config/: config_manager.py
services/sre-assistant/src/sre_assistant/config/environments/: development.yaml
services/sre-assistant/src/sre_assistant/tools/: __init__.py  control_plane_contracts.py  control_plane_tool.py  loki_tool.py  prometheus_tool.py  workflow.py
services/sre-assistant/src/sre_assistant/tools/tests/: test_e2e_workflow.py
services/sre-assistant/tests/: test_api.py  test_auth.py  test_integration.py  test_metrics.py  test_workflow.py
services/sre-assistant/tests/tools/: test_control_plane_tool.py  test_loki_tool.py  test_prometheus_tool.py
(+69 files in other folders)
