# services/sre-assistant/pyproject.toml

[tool.poetry]
name = "sre-assistant"
version = "3.0.0"
description = "無介面的 SRE 專家代理，提供診斷、分析與自動化修復能力"
authors = ["SRE Platform Team"]
packages = [{include = "sre_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web 框架
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = {version = "^0.26.0", extras = ["http2"]}

# Google ADK 相關
google-generativeai = "^0.3.2"
google-cloud-aiplatform = "^1.40.0"

# 資料驗證與序列化
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# 資料庫連接
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"

# 向量資料庫
chromadb = "^0.4.22"
sentence-transformers = "^2.3.1"

# 快取
redis = "^5.0.1"
hiredis = "^2.3.2"

# JWT 認證
# pyjwt = {extras = ["crypto"], version = "^2.8.0"} # 已被 python-jose 取代
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9" # 用於 FastAPI 表單處理

# 監控工具客戶端
prometheus-client = "^0.19.0"
opentelemetry-instrumentation-fastapi = "0.48b0"
opentelemetry-instrumentation-httpx = "0.48b0"
opentelemetry-exporter-otlp-proto-grpc = "1.27.0"

# 非同步任務
celery = "^5.3.6"

# API 速率限制
slowapi = "^0.1.9"

# 工具與實用程式
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"

# 日期時間處理
python-dateutil = "^2.8.2"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
# 測試工具
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"

# 程式碼品質
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

# 開發工具
ipython = "^8.20.0"
ipdb = "^0.13.13"
rich = "^13.7.0"

# 文件生成
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
respx = "^0.22.0"

[tool.poetry.scripts]
sre-assistant = "sre_assistant.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 預設排除的目錄
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["sre_assistant"]
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "google.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
env = [
    "ENVIRONMENT=test",
    "AUTH_PROVIDER=none",
]

[tool.coverage.run]
source = ["src/sre_assistant"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100